Bug 149280 - CRASH: reinstalling extension from addition dialog
Summary: CRASH: reinstalling extension from addition dialog
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.4.0 target:7.3.5 target:7.3.4
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-25 10:26 UTC by Xisco Faulí
Modified: 2022-06-20 08:01 UTC (History)
1 user (show)

See Also:
Crash report or crash signature: ["dp_gui::TheExtensionManager::modified(com::sun::star::lang::EventObject const &)"]
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-05-25 10:26:19 UTC
Steps to reproduce:
1. Open Writer
2. Go to Tools - Options- View - Add more icon theme via extension
3. Install one extension
4. Go to Tools - Extension
5. remove the extension ( DO NOT RESTART )
6. Repeat steps 2 and 3 ( doesn't matter if you install the same extension or another one )

-> Crash

Reproduced in

Version: 7.4.0.0.alpha1+ / LibreOffice Community
Build ID: b6e0ae1b1bad5e222e21bbb4b2a158c1fc6f9779
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Caolán McNamara 2022-05-25 10:30:40 UTC
I can reproduce that
Comment 2 Xisco Faulí 2022-05-25 10:31:47 UTC
Also reproduced in

Version: 7.1.0.0.alpha1+
Build ID: 738bcf5e9a8c443d60c29c3a8068e8c16c72638a
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 3 Commit Notification 2022-05-25 14:35:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9525dc41e3f592a373315d005ed9a65cbb57861c

tdf#149280 modified called after dialog was destroyed

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2022-05-25 14:48:41 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/b121e772350fa5e7e5be597e79e7487debd060c2

tdf#149280 modified called after dialog was destroyed

It will be available in 7.3.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2022-05-27 08:44:05 UTC
Verified in

Version: 7.4.0.0.alpha1+ / LibreOffice Community
Build ID: a8df5c815c8b002b7083b8777e3dd8beac573bf3
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Caolán, Thanks for fixing this issue!
Comment 6 Commit Notification 2022-06-01 16:55:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-3-4":

https://git.libreoffice.org/core/commit/06fb42fbb3edc5dbabbaf87590e58761247c9e9e

tdf#149280 modified called after dialog was destroyed

It will be available in 7.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 SaintJane 2022-06-20 02:27:13 UTC Comment hidden (spam)