tdf#149280 modified called after dialog was destroyed

just ignore it in that case

Change-Id: I8f294acd9ee16d2f9c8662614fac3672f80b3376
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/134902
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit b121e772350fa5e7e5be597e79e7487debd060c2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/134908
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
Tested-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>